[package]
name = 'substrate-validator-set'
version = '0.9.42'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'

[patch.crates-io]
# Path build to use our Substrate version from github.
frame-benchmarking = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
frame-support = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
frame-system = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
pallet-session = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
pallet-timestamp = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-api = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-application-crypto = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-arithmetic = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-core = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-externalities = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-inherents = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-io = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-keystore = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-runtime = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-weights = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-runtime-interface = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-session = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-state-machine = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-std = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-storage = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-timestamp = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-tracing = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-trie = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }
sp-version = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-test-s390x" }

[dev-dependencies.serde]
features = ['derive']
version = '1.0.126'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.log]
default-features = false
version = '0.4.17'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
optional = true
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.pallet-session]
default-features = false
features = ['historical']
git = 'https://github.com/PolymeshAssociation/substrate.git'
branch = 'polymesh-v6-monthly-2023-03-test-s390x'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std',
]
try-runtime = ['frame-support/try-runtime']
