[package]
name = 'substrate-validator-set'
version = '0.9.42'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'

[patch.crates-io]
# Path build to use our Substrate version from github.
frame-benchmarking = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-support = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-system = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-session = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-timestamp = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-application-crypto = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-arithmetic = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-core = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-externalities = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-inherents = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-io = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-keystore = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-runtime = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-weights = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-runtime-interface = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-session = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-state-machine = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-std = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-storage = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-timestamp = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-tracing = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-trie = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-version = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }

[dependencies.substrate-bip39]
version = "=0.4.5"

[dev-dependencies.serde]
features = ['derive']
version = '1.0.126'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.log]
default-features = false
version = '0.4.17'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
optional = true
branch = 'cli-tool'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.pallet-session]
default-features = false
features = ['historical']
git = 'https://github.com/PolymeshAssociation/polkadot-sdk.git'
branch = 'cli-tool'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
std = [
    'codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std',
]
try-runtime = ['frame-support/try-runtime']
